<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>de.tum.in.msrg</groupId>
  <artifactId>storm-topology</artifactId>
  <version>1.0-SNAPSHOT</version>

  <name>storm-topology</name>
  <!-- FIXME change it to the project's website -->
  <url>http://www.example.com</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <storm.version>2.4.0</storm.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.storm</groupId>
      <artifactId>storm-client</artifactId>
      <version>${storm.version}</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.kafka</groupId>
      <artifactId>kafka-clients</artifactId>
      <version>2.4.1</version>
    </dependency>
    <dependency>
      <groupId>de.tum.in.msrg</groupId>
      <artifactId>datamodel</artifactId>
      <version>1.0-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>commons-cli</groupId>
      <artifactId>commons-cli</artifactId>
      <version>1.4</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.storm</groupId>
      <artifactId>storm-kafka-client</artifactId>
      <version>${storm.version}</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.storm</groupId>
      <artifactId>storm-redis</artifactId>
      <version>${storm.version}</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.storm</groupId>
      <artifactId>storm-server</artifactId>
      <version>${storm.version}</version>
      <scope>compile</scope>
    </dependency>
  </dependencies>

  <build>
    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
      <plugins>
        <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-shade-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>${maven.compiler.source}</source>
          <target>${maven.compiler.target}</target>
          <compilerArgs>
            <arg>
              --add-exports=java.base/sun.net.util=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED
            </arg>
          </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.0.0</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <transformers>
                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <mainClass>de.tum.in.msrg.storm.Submitter</mainClass>
                </transformer>
              </transformers>
              <artifactSet>
                <excludes>
                  <exclude>junit:junit</exclude>
                  <exclude>org.apache.storm:storm-server</exclude>
                  <exclude>org.apache.storm:storm-client</exclude>
                  <exclude>org.slf4j:slf4j-api</exclude>
                  <exclude>org.apache.logging.log4j:log4j-api</exclude>
                  <exclude>org.apache.logging.log4j:log4j-core</exclude>
                  <exclude>org.apache.logging.log4j:log4j-slf4j</exclude>
                  <exclude>org.slf4j:log4j-over-slf4j</exclude>
                  <exclude>org.apache.logging.log4j:log4j-slf4j-impl</exclude>
                  <exclude>org.apache.storm:storm-shaded-deps</exclude>
                  <exclude>com.sun.activation:jakarta.activation</exclude>
                  <exclude>jakarta.xml.bind:jakarta.xml.bind-api</exclude>
                  <exclude>javax.annotation:javax.annotation-api</exclude>
                  <exclude>com.esotericsoftware:kryo</exclude>
                  <exclude>com.esotericsoftware:reflectasm</exclude>
                  <exclude>com.esotericsoftware:minlog</exclude>
                  <exclude>org.objenesis:objenesis</exclude>
                  <exclude>io.dropwizard.metrics:metrics-core</exclude>
                  <exclude>io.dropwizard.metrics:metrics-graphite</exclude>
                  <exclude>io.dropwizard.metrics:metrics-jvm</exclude>

<!--                  <exclude>org.ow2.asm:asm</exclude>-->
<!--                  <exclude>org.ow2.asm:asm</exclude>-->
<!--                  <exclude>org.ow2.asm:asm</exclude>-->
<!--                  <exclude>org.ow2.asm:asm</exclude>-->

                </excludes>
              </artifactSet>
              <!--                  <minimizeJar>true</minimizeJar>-->
              <filters>
                <filter>
                  <artifact>*:*</artifact>
                  <excludes>
                    <exclude>META-INF/*.SF</exclude>
                    <exclude>META-INF/*.DSA</exclude>
                    <exclude>META-INF/*.RSA</exclude>
                  </excludes>
                </filter>
              </filters>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
